--- a/src/container/home/components/cover.page/cover.page.scss
+++ b/src/container/home/components/cover.page/cover.page.scss
@@ -1,5 +1,5 @@
-.cover{
-  background: linear-gradient(#42454a,#555a5e,#707175,#b1aea9,#42454a,#555a5e,#707175,#b1aea9,);
+.cover {
+  background: linear-gradient(#42454a, #707175, #a9a9aa, #e6e7ea);
   height: 100vh;
   // width: 100vw;
 }
@@ -9,4 +9,13 @@
   background-image: url(../../../../../public/assets/images/desktop.png);
   background-size: 100% 100%, contain;
   background-position: center;
+}
+
+@media screen and (max-width: 780px) {
+  .cover {
+    height: 50vh;
+  }
+  .cover-page {
+    height: 50vh;
+  }
 }
