--- a/src/container/project.categories/project.categories.scss
+++ b/src/container/project.categories/project.categories.scss
@@ -18,3 +18,6 @@ margin: 20px;
   transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 
 }
+.payment{
+  background: linear-gradient(#96cdd4, #e5edfd,#f8f9fa );
+}
