--- a/src/components/common/projects.card/projects.card.scss
+++ b/src/components/common/projects.card/projects.card.scss
@@ -1,5 +1,6 @@
 .projectContainer {
-  background-color:#4d0c27;
+  // background: radial-gradient(#2d2d2d, #4e4e4e,#2d2d2d );
+  background: #4e4e4e;
   height: 500px;
   width: 680px;
   border-radius: 16px;
@@ -7,7 +8,7 @@
   color: white;
 }
 .projectImage {
-  background-image: url(../../../../public/assets/images/building.jpeg);
+  // background-image: url(../../../../public/assets/images/nk.jpeg);
   background-size: 100% 100%,auto;
 
 }
