--- a/src/components/common/coming.soon.carousel/coming.soon.carousel.scss
+++ b/src/components/common/coming.soon.carousel/coming.soon.carousel.scss
@@ -14,6 +14,19 @@
     letter-spacing: 2px;
     font-weight: 500;
   }
+  .wrap{
+  
+  }
+  .soon {
+    font-size: 12px;
+    letter-spacing: 2px;
+    font-weight: 700;
+    background: linear-gradient(90deg, #0c5352, #fff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    // text-fill-color: transparent;
+  }
   @media screen and (max-width: 760px) {
     .circle {
       height: 180px;
