dashboard design ready

--- a/src/App.scss
+++ b/src/App.scss
@@ -146,6 +146,9 @@ body::-webkit-scrollbar-thumb:hover {
 .w-16 {
   width: 16% !important;
 }
+.w-5 {
+  width: 5% !important;
+}
 .w-10 {
   width: 10% !important;
 }
