login and dashboard page handling

--- a/src/container/home/home.scss
+++ b/src/container/home/home.scss
@@ -1,3 +1,7 @@
+.hardwork{
+  background: linear-gradient(to right,#033044,#bce0cb );
+  border-radius: 12px;
+}
 .hardwork-box {
   height: 160px;
   width: 220px;
