--- a/src/components/common/projects.card/projects.card.scss
+++ b/src/components/common/projects.card/projects.card.scss
@@ -1,6 +1,6 @@
 .projectContainer {
-  // background: radial-gradient(#2d2d2d, #4e4e4e,#2d2d2d );
-  background: #4e4e4e;
+  background: radial-gradient(#033044, rgb(155, 149, 149),black );
+  // background:#033044;
   height: 500px;
   width: 680px;
   border-radius: 16px;
