--- a/src/container/about.us/components/offers/offers.scss
+++ b/src/container/about.us/components/offers/offers.scss
@@ -1,3 +1,8 @@
+.offerWrapper {
+  border-radius: 10px;
+  background: #f2f7f1;
+}
+
 .offer {
   background-image: url(../../../../../public/assets/images/dollar.avif);
   background-size: 100% 100%, auto;
@@ -5,15 +10,28 @@
   width: 120px;
 }
 
-.mission{
+.mission {
   background-image: url(../../../../../public/assets/images/mission.jpg);
   background-size: 100% 100%, cover;
   height: 400px;
   border-radius: 10px;
 }
-.services{
+.services {
   background-image: url(../../../../../public/assets/images/services.jpg);
   background-size: 100% 100%, cover;
   height: 400px;
   border-radius: 10px;
+}
+
+@media screen and (max-width: 400px) {
+  .offer {
+    height: 60px;
+    width: 80px;
+  }
+  .mission {
+    height: 250px;
+  }
+  .services {
+    height: 250px;
+  }
 }
