--- a/src/container/project.categories/project.categories.scss
+++ b/src/container/project.categories/project.categories.scss
@@ -10,16 +10,30 @@
 }
 
 .zoom {
-  transition: transform .2s; /* Animation */
-margin: 20px;
+  transition: transform 0.2s; /* Animation */
+  margin: 20px;
+  height: 700px;
+  width: 600px;
 }
 
 .zoom:hover {
-  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-
+  transform: scale(
+    1.1
+  ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
-.payment{
-  background: linear-gradient(#96cdd4, #e5edfd,#f8f9fa );
+.payment {
+  background: linear-gradient(#96cdd4, #e5edfd, #f8f9fa);
   border-radius: 12px;
+}
 
+@media screen and (max-width: 800px) {
+  .zoom {
+    height: 420px;
+    width: 280px;
+  }
+  .box {
+    height: 320px;
+    width: 280px;
+    border-radius: 16px;
+  }
 }
