--- a/src/container/about.us/components/offers/offers.scss
+++ b/src/container/about.us/components/offers/offers.scss
@@ -11,9 +11,10 @@
 }
 
 .mission {
-  background-image: url(../../../../../public/assets/images/mission.jpg);
-  background-size: 100% 100%, cover;
-  height: 400px;
+  background-image: url(../../../../../public/assets/images/faizan.jfif);
+  background-size: 100% 100%, contain;
+  height: 600px;
+  width: 20px;
   border-radius: 10px;
 }
 .services {
