--- a/src/container/home/components/cover.page/cover.page.scss
+++ b/src/container/home/components/cover.page/cover.page.scss
@@ -9,6 +9,26 @@
   background-image: url(../../../../../public/assets/images/desktop.png);
   background-size: 100% 100%, contain;
   background-position: center;
+  overflow: hidden;
+}
+.cover-label {
+  top: 120px;
+  position: relative;
+  left: 650px;
+  color: white;
+}
+@media screen and (max-width: 1400px) {
+  .cover-label {
+    top: 120px;
+    left: 250px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .cover-label {
+    top: 120px;
+    left: 120px;
+  }
 }
 
 @media screen and (max-width: 780px) {
