--- a/src/components/common/wrapper/wrapper.scss
+++ b/src/components/common/wrapper/wrapper.scss
@@ -4,7 +4,7 @@
   background-image: url(../../../../public/assets/images/mustafa1.jpeg);
   background-size: 100% 100%, contain;
   background-position: center;
-  opacity: 0.5;
+  // opacity: 0.5;
 }
 
 @media screen and (max-width: 720px) {
