--- a/src/components/common/wrapper/wrapper.scss
+++ b/src/components/common/wrapper/wrapper.scss
@@ -5,6 +5,7 @@
   background-size: 100% 100%, contain;
   background-position: center;
   // opacity: 0.5;
+  object-fit: contain;
 }
 
 @media screen and (max-width: 720px) {
