cover image changes

--- a/src/components/common/wrapper/wrapper.scss
+++ b/src/components/common/wrapper/wrapper.scss
@@ -1,15 +1,17 @@
 .wrapper {
   height: 80vh;
   // width: 100vw;
-  background-image: url(../../../../public/assets/images/mustafa1.jpeg);
+  background-image: url(../../../../public/assets/images/Desktop.png);
   background-size: 100% 100%, contain;
   background-position: center;
-  // opacity: 0.5;
+  opacity: 0.5;
   object-fit: contain;
 }
 
 @media screen and (max-width: 720px) {
   .wrapper {
     height: 40vh;
+  background-image: url(../../../../public/assets/images/Mobile.png);
+
   }
 }
