trash deleted and some fixing

--- a/src/container/about.us/components/offers/offers.scss
+++ b/src/container/about.us/components/offers/offers.scss
@@ -4,7 +4,7 @@
 }
 
 .offer {
-  background-image: url(../../../../../public/assets/images/dollar.avif);
+  // background-image: url(../../../../../public/assets/images/dollar.avif);
   background-size: 100% 100%, auto;
   height: 100px;
   width: 120px;
