--- a/src/container/contact.us/contact.us.scss
+++ b/src/container/contact.us/contact.us.scss
@@ -7,7 +7,7 @@
       background-position: center;
     }
     .appointmentImage {
-        background-image: url(../../../public/assets/images/appointment.svg);
+        background-image: url(../../../public/assets/images/appointment.jpg);
       height: 800px;
       width: 100%;
       background-size: 100% 100%, contain;
