--- a/src/components/common/wrapper/wrapper.scss
+++ b/src/components/common/wrapper/wrapper.scss
@@ -4,14 +4,23 @@
   background-image: url(../../../../public/assets/images/desktop.png);
   background-size: 100% 100%, contain;
   background-position: center;
-  opacity: 0.5;
+  // opacity: 0.5;
   object-fit: contain;
+}
+
+.wrapperTxt {
+  position: relative;
+  top: 150px;
+  left: 30px;
 }
 
 @media screen and (max-width: 720px) {
   .wrapper {
     height: 40vh;
-  background-image: url(../../../../public/assets/images/mobile.png);
-
+    background-image: url(../../../../public/assets/images/mobile.png);
+  }
+  .wrapperTxt {
+    top: 90px;
+    left: 10px;
   }
 }
