--- a/src/container/home/home.scss
+++ b/src/container/home/home.scss
@@ -9,11 +9,31 @@
   border-radius: 12px;
   background: white;
 }
+.joint {
+  background-image: url(../../../../react-boiler-plate-for-ui/public/assets/images/joint.png);
+  background-size: 100% 100%, contain;
+  height: 600px;
+  width: 100%;
+  border-radius: 10px;
+  object-fit: fill;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: transform .2s;
+}
+
+.joint:hover{
+  transform: scale(0.98);
+  opacity: 0.7;
+}
 
 @media screen and (max-width: 720px) {
   .hardwork-box {
     height: 120px;
     width: 180px;
+  }
+  .joint{
+    height: 350px;
   }
 }
 
