--- a/src/container/home/home.scss
+++ b/src/container/home/home.scss
@@ -10,7 +10,7 @@
   background: white;
 }
 .joint {
-  background-image: url(../../../../react-boiler-plate-for-ui/public/assets/images/joint.png);
+  background-image: url(../../../public//assets/images/joint.png);
   background-size: 100% 100%, contain;
   height: 600px;
   width: 100%;
