--- a/src/container/joint.venture/joint.venture.scss
+++ b/src/container/joint.venture/joint.venture.scss
@@ -1,5 +1,5 @@
 .madina {
-  background-image: url(../../../../react-boiler-plate-for-ui/public/assets/images/madina.png);
+  background-image: url(../../../public//assets/images/madina.png);
   background-size: 100% 100%, contain;
   height: 600px;
   width: 100%;
