updated sara bridge view data

--- a/src/components/common/projects.card/projects.card.scss
+++ b/src/components/common/projects.card/projects.card.scss
@@ -1,8 +1,6 @@
 .projectContainer {
   background: radial-gradient(#033044, rgb(155, 149, 149), black);
-  // background: wheat;
-  // background:#033044;
-  // height: 500px;
+  // background: #1b5583;
   width: 680px;
   border-radius: 16px;
   overflow: hidden;
