--- a/src/container/project.categories/project.categories.scss
+++ b/src/container/project.categories/project.categories.scss
@@ -14,6 +14,9 @@
   margin: 20px;
   height: 700px;
   width: 600px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .zoom:hover {
